minor-fix: page overflow

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,13 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
-body{
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-}
+
 
 #canvasid{
   background-color: black;
